# crowdfork

./: .coverage  .gitignore  README.md  notes.txt  pyproject.toml  test_main.py
.github/workflows/: github-actions-demo.yml
frontend/: package-lock.json
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Button.css  Button.jsx
frontend/src/pages/: Landing.jsx  Login.css  Login.jsx  Profile.css  Profile.jsx  Restaurant.css  Restaurant.jsx  ReviewForm.css  ReviewForm.jsx  Reviews.css  Reviews.jsx  Saved.css  Saved.jsx  Search.css  Search.jsx  SignUp.css  SignUp.jsx  UserProfile.jsx
src/backend/: firebaseconfig.py  main.py  models.py  requirements.txt  yelp_api_client.py
src/crowdfork.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/your_project_name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_main.py
