[project]
name = "your_project_name"
version = "0.1.0"
description = "A Python project with uv, ruff, mypy, pytest, and mkdocs."
authors = [{ name = "Crowd Fork", email = "your.email@example.com" }]
requires-python = ">=3.10"
readme = "README.md"

# Dependencies required at runtime
dependencies = [
    "requests>=2.31.0",
]

# Dev dependencies installed via `uv sync --all-extras --dev`
[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "types-requests",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------
# Tool configurations below
# -------------------------

[tool.ruff]
# Match your repo structure
src = ["src", "tests"]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist", ".venv"]
# Ruff handles both linting and formatting
select = ["E", "F", "I", "UP", "B"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
show_error_codes = true
namespace_packages = true
mypy_path = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

